Visualizations by Anna

--- a/.gitignore
+++ b/.gitignore
@@ -5,4 +5,6 @@
 **.DS_Store
 model/checkpoints/*
 writing
+raw_data/national/Climate/climdiv/
+raw_data/national/Climate/climdiv-*-v1.0.0-20200304
 *.#*
