--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,5 @@ raw_data/national/Climate/climdiv-*-v1.0.0-20200304
 *.#*
 .idea/
 **.ipynb_checkpoints
+**raw_data/national/SafeGraph/
+**data/out_of_home_activity
